--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ html:
   use_issues_button: false
   home_page_in_navbar: false
   navigation_with_keys: false
+  google_analytics_id: UA-98479156-1
 
 sphinx:
     html_theme_options: 
